--- a/package.json
+++ b/package.json
@@ -5,17 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "json-server -p 3002 --watch db.json",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "express": "^4.18.2",
     "formik": "^2.4.4",
+    "json-server": "^0.17.3",
+    "memoize-one": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "styled-components": "^6.0.7",
     "yup": "^1.2.0"
   },
   "devDependencies": {
